[package]
name = "getprice"
version = "1.1.0"
authors = ["Greg Kapka <greg@kapka.co.uk>"]
edition = "2018"

[dependencies]
log = "0.4.8"
docopt = "1.1.0"
quick-error = "2.0.0"
serde_json = "1.0.57"
serde_derive = "1.0.116"
serde = { version = "=1", features = ["derive"] }
reqwest = { version = "0.10", features = ["blocking", "json"] }
